--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@ body {
     background-color: white;
     text-align: center;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); /* Add shadow to the bottom */
+    border-radius: 5px;
 }
 
 img {
